<resources>
    <string name="app_name">MyCheckIns</string>

    <string name="crime_title_hint">Enter a title for the Check-In.</string>

    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Complete?</string>

    <string name="date_picker_title">Date of Check-In:</string>

    <string name="new_crime">New Check-In</string>

    <string name="show_subtitle">Show Posts</string>
    <string name="hide_subtitle">Hide Posts</string>
    <string name="subtitle_format">%1$d Posts</string>

    <string name="crime_suspect_text">Choose Contact</string>
    <string name="crime_report_text">Send Check-in</string>

    <string name="crime_report">%1$s!
       Hey! I Checked-In on %2$s. %3$s, and %4$s
    </string>

    <string name="crime_report_solved">The Check-In is complete</string>
    <string name="crime_report_unsolved">The Check-In is not complete</string>
    <string name="crime_report_no_suspect">there is noone to share with!.</string>
    <string name="crime_report_suspect">Sharing to %s.</string>
    <string name="crime_report_subject">MyCheckins Check-In Report</string>
    <string name="send_report">Send Check-In report via</string>
    <string name="coordinates">  Latitude:  %5$s   Longitude: %6$s. </string>
</resources>
